--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -8,7 +8,7 @@
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "FIW",
+      "prefix": "fiw",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
